@@ -1,0 +1,81 @@
+#! /usr/bin/env python
+
+# Copyright 2004, Magnus Hagdorn
+# 
+# This file is part of GLIMMER.
+# 
+# GLIMMER is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+# 
+# GLIMMER is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with GLIMMER; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+"""Class for plotting ISM grid files."""
+
+__all__ = ['Area']
+
+import PyGMT,Numeric
+from CF_loadfile import *
+
+class Area(PyGMT.AreaXY):
+    """CF grid plotting area."""
+
+    def __init__(self,parent,CFfile,pos=[0.,0.],size=10):
+        """Initialising ISM area.
+
+        parent: can be either a Canvas or another Area.
+        CFfile: CF file used for setting up projection and area
+        pos: position of area relative to the parent
+        size: size of GMT area
+        """
+
+        # initialising geographic area
+        self.file = CFfile
+        self.geo = PyGMT.AreaGEO(parent,CFfile.projection.getGMTprojection().upper(), pos=pos, size=size)
+        self.geo.setregion(CFfile.ll_geo, CFfile.ur_geo)
+        # initialising paper area
+        self.paper = PyGMT.AreaXY(parent,pos=pos,size=self.geo.size)
+
+        # initialising XY area
+        PyGMT.AreaXY.__init__(self,parent,pos=pos,size=self.geo.size)
+        self.setregion(CFfile.ll_xy, CFfile.ur_xy)
+
+    def coordsystem(self,grid=True):
+        """Plot coordinate system.
+
+        grid: if true plot lat/long grid"""
+        self.geo.axis = self.axis
+        self.geo.coordsystem(grid=grid)
+
+    def coastline(self,args='-W -A0/1/1'):
+        """Plot coastline.
+
+        args: arguments passed on to pscoast."""
+        self.geo.coastline(args)
+
+    def stamp(self,text):
+        """Print text in lower left corner."""
+
+        self.paper.text([0.15,0.15],text,textargs='8 0 0 LB',comargs='-W255/255/255o')
+
+
+
+if __name__ == '__main__':
+    import sys
+
+    
+    infile = CFloadfile(sys.argv[1])
+    plot = PyGMT.Canvas(sys.argv[2])
+    area = Area(plot,infile)
+    area.coastline()
+    area.coordsystem()
+    area.stamp('hi')
+    plot.close()
